--- a/index.html
+++ b/index.html
@@ -5,9 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+
+
+
 </head>
+
+<!-- Loading Screen -->
+<div id="loading-screen" class="loading-screen">
+    <div class="loading-content">
+        <div class="loading-spinner"></div>
+        <h2 class="loading-text">EliteGaming بەخێربێن بۆ</h2>
+    </div>
+</div>
+
 <body>
-    <button onclick="window.location.href = 'PS2/Ps2Main.html';">PS2</button>
-    <button onclick="window.location.href = 'Main/index.html';">special</button>
+
+          <header>
+    <h1> EliteGaming 0750-123-8780 </h1>
+</header>
+  
+<div class="items">
+
+    <button onclick="window.location.href = 'PS2/Ps2Main.html';">
+        <img src="covers.jpg" alt="">
+     PS2   یاریەکانی 
+    </button>
+    <button onclick="window.location.href = 'Main/index.html';">
+                <img src="accessories.jpg" alt="">
+     کەلوپەلە دەگمەنەکان
+    </button>
+
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
