--- a/Main/index.html
+++ b/Main/index.html
@@ -7,39 +7,37 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
+   <header>
+    <h1> EliteGaming 0750-123-8780 </h1>
+</header>
+
 <body>
-    
-         <!-- <a href="PS Plus/main.html">
- <img  src="playstation plus.jpg" alt="" style="margin-right: 15px;">
-</a> -->
-
-
-<!-- style="width: 100%;" -->
       
 <div class="fullBody">
 
 <div class="item">
- <img  src="1.jpeg" alt="" >
+ <img  src="images/1.jpeg" alt="" >
  <h3 class="writing">5000 IQD</h3>
 </div>
 
 <div class="item">
- <img  src="2.jpeg" alt="" >
+ <img  src="images/2.jpeg" alt="" >
  <h3 class="writing">6000 IQD</h3>
 </div>
 
 <div class="item">
- <img  src="3.jpeg" alt="" >
+ <img  src="images/3.jpeg" alt="" >
  <h3 class="writing">7000 IQD</h3>
 </div>
 
 <div class="item">
- <img  src="4.jpeg" alt="" >
+ <img  src="images/4.jpeg" alt="" >
  <h3 class="writing">8000 IQD</h3>
 </div>
 
 <div class="item">
- <img  src="5.jpeg" alt="" >
+ <img  src="images/5.jpeg" alt="" >
  <h3 class="writing">9000 IQD</h3>
 </div>
 
@@ -48,22 +46,6 @@
 
 
 </div>
-
-
-
-<!-- style="width: 100%; margin-left:-3px;" -->
-
-
-
-
-
-
-     <!-- <script>
-        function openFile() {
-          window.location.href = 'PS2/Ps2Main.html';
-        }
-            window.onload = openFile;
-    </script> -->
 
 
 
