--- a/Main/index.html
+++ b/Main/index.html
@@ -17,27 +17,27 @@
 <div class="fullBody">
 
 <div class="item">
- <img  src="images/1.jpeg" alt="" >
+ <img  src="1.jpeg" alt="" >
  <h3 class="writing">5000 IQD</h3>
 </div>
 
 <div class="item">
- <img  src="images/2.jpeg" alt="" >
+ <img  src="2.jpeg" alt="" >
  <h3 class="writing">6000 IQD</h3>
 </div>
 
 <div class="item">
- <img  src="images/3.jpeg" alt="" >
+ <img  src="3.jpeg" alt="" >
  <h3 class="writing">7000 IQD</h3>
 </div>
 
 <div class="item">
- <img  src="images/4.jpeg" alt="" >
+ <img  src="4.jpeg" alt="" >
  <h3 class="writing">8000 IQD</h3>
 </div>
 
 <div class="item">
- <img  src="images/5.jpeg" alt="" >
+ <img  src="5.jpeg" alt="" >
  <h3 class="writing">9000 IQD</h3>
 </div>
 
@@ -51,3 +51,4 @@
 
 </body>
 </html>
+
